# pyo3-performance

./: Cargo.toml  bench.py  pyproject.toml
src/: lib.rs
